--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ mistralai==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 propcache==0.2.0
+psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dateutil==2.8.2
