--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.10.10
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2
+asyncpg==0.29.0
 attrs==24.2.0
 certifi==2024.8.30
 discord.py==2.4.0
